docs: ADR-0002 -- H2 landing decisions; tools provenance moved to notes/tools/
Records R11-R17, the carve as built, the verification method, R11's
migrated ledger (tools/OPEN-4..6, D-b, SS-5, lineage-duplication, H5,
NIST-reply, SETUP-unspoiled-walk, sim-JDK-21-errand), and a substantial
deviation record: two premise corrections (R13's file count, R14's
judge/corpus direction), palgebra needing an interface.clj R13 did not
name, docsgen.clj's component->base inversion and its fix,
quickstart_fresh.clj's dependency on a README already dropped as
superseded, the cwd-relative-path convention difference from sim, five
census false positives, and two clojure.core-shadowing exports that
broke a real subprocess test. ADR-0001 amended in place (H1/H2/H3
closed, dated, not reverted). Tools ADRs/facts-register/agent history
moved to notes/tools/ as byte-identical provenance, workspace AGENTS.md
updated to reflect the landing.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>